# aoc2025

./: .gitignore  Makefile  README.md  pyproject.toml
aoc2025/: cli.py
aoc2025/days/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
aoc2025/utils/: io.py  parsing.py
tests/: test_day01.py  test_day02.py  test_day03.py
