[project]
name = "aoc2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomas Haas",email = "haas.t@atlas.cz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = []

[tool.poetry.scripts]
aoc = "aoc2025.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
