[project]
name = "aoc2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomas Haas",email = "haas.t@atlas.cz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)"
]

[tool.poetry]
packages = []

[tool.poetry.scripts]
aoc = "aoc2025.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
ruff = "^0.6.0"
black = "^24.10.0"
mypy = "^1.13.0"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
